--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -16,7 +16,6 @@
         gap: 15px;
         flex-wrap: wrap;
         padding-bottom: 100px;
-
     }
 
     .image-box {
@@ -25,6 +24,7 @@
         height: 400px;
         overflow: hidden;
         border-radius: 10px;
+        min-width: 150px;
         max-width: calc(25% - 10px);
 
         .portfolio-image {
@@ -52,7 +52,7 @@
         .title {
             margin-bottom: 0;
             margin-top: 0;
-            max-width: calc(100% - 4vw);
+            max-width: 80%;
             color: #fff;
             font-size: 24px;
             font-weight: 500;
@@ -62,9 +62,9 @@
         .description {
             font-size: 14px;
             margin-bottom: 5px;
-            max-width: calc(75% - 10px);
             color: #fff;
             font-weight: 700;
+            max-width: 80%;
         }
 
         .btn {
