--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -152,6 +152,7 @@
       top: 0;
       left: 0;
       background: #181818;
+      opacity: 99%;
       height: 100%;
       margin: 0;
       z-index: 2;
